i2c scan + buzzer + imu + baro tests

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,14 @@
 [env:temu-hw-validation]
 platform = atmelavr
-board = nanoatmega328
+board = nanoatmega328 ; old bootloader
 framework = arduino
 board_build.mcu = atmega328p
+
+; Set this for fast serial monitor output 
 monitor_speed = 115200
+
+;import required libraries
+lib_deps = 
+    https://github.com/LiquidCGS/FastIMU
+    https://github.com/Polohpi/AT24C256
+    https://github.com/dvarrel/BMP280
